--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,7 @@ edition = "2018"
 [dependencies]
 crc8 = "0.1.1"
 rppal = { version = "0.12.0", features = ["hal"] }
+cxx = "1.0"
+
+[build-dependencies]
+cxx-build = "1.0"
