--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ crc8 = "0.1.1"
 rppal = { version = "0.12.0", features = ["hal"] }
 cxx = "1.0"
 easy-error = "1.0.0"
+clap = "2.33.3"
 
 [build-dependencies]
 cxx-build = "1.0"
