--- a/i2c-tools/build-deb/etc/systemd/system/fan-ctrl.service
+++ b/i2c-tools/build-deb/etc/systemd/system/fan-ctrl.service
@@ -2,7 +2,9 @@
 Description=fan ctrl
 
 [Service]
+Type=simple
 ExecStart=/usr/local/bin/fan-ctrl.sh
+ExecStopPost=/usr/local/bin/fan-ctrl-stop.sh
 StandardOutput=syslog
 StandardError=syslog
 SyslogIdentifier=fanctrl
